Optional #1 Extreme concurency handling Add optimistic locking, a Redis rating lock, and Sidekiq jobs.
