# app/models/post.rb
@@ -21,7 +21,7 @@ class Post < ApplicationRecord
   end
 
   def as_api_json
-    as_json(only: %i[id title body views_count ratings_count average_rating created_at updated_at]).merge(
+    as_json(only: %i[id title body views_count ratings_count average_rating lock_version created_at updated_at]).merge(
       "user" => user.as_public_json
     )
   end
