# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.1].define(version: 2026_08_23_091100) do
+ActiveRecord::Schema[8.1].define(version: 2026_08_23_105700) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
 
@@ -19,6 +19,7 @@ ActiveRecord::Schema[8.1].define(version: 2026_08_23_091100) do
     t.text "body", null: false
     t.datetime "created_at", null: false
     t.datetime "deleted_at"
+    t.integer "lock_version", default: 0, null: false
     t.integer "ratings_count", default: 0, null: false
     t.integer "ratings_sum", default: 0, null: false
     t.string "title", limit: 100, null: false
